--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
+0.105   2014-06-25
   * If we're going to write to a string, acquire the pointer with SvPV_force
     so that perl copies the underlying string if it is a Copy-On-Write string
+  * Fix whitespace on POD to make podchecker happy
 
 0.103   2013-07-09
   * Documentation updates
